# go

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  CONTRIBUTING.md  CPPLINT.cfg  QUALITY.md  README.md  TECHNICAL.md  conanfile.txt  tmp_run_tests.ps1
.github/workflows/: ci.yml  sanitizers.yml  stress.yml
archive/cleanup-backup/: InstallationLog.txt  cppcheck_err.txt  cppcheck_err2.txt  cppcheck_err3.txt  cppcheck_err4.txt  cppcheck_err5.txt  cppcheck_out2.txt  cppcheck_out4.txt  cppcheck_report.txt  find_compiler.ps1  install_mingw.ps1  restore_mingw.ps1  setup_conan.ps1  stderr.txt  stdout.txt  tmp_error.cpp
archive/cleanup-backup/build-bench/: .ninja_deps  CMakeCache.txt  build.ninja
archive/cleanup-backup/build-bench-release/: .ninja_deps  CMakeCache.txt  cmake_install.cmake
archive/cleanup-backup/build-bench-release/src/: cmake_install.cmake
archive/cleanup-backup/build-bench-release/src/bench/: cmake_install.cmake
archive/cleanup-backup/build-bench-release/tests/: CTestTestfile.cmake  cmake_install.cmake
archive/cleanup-backup/build-bench/src/bench/: cmake_install.cmake
archive/cleanup-backup/repo-snapshot-20251229_000947/docs/: PR_CHECKLIST.md
archive/cleanup-backup/repo-snapshot-20251229_000947/scripts/: run_with_timeout.sh
automation/: game1.txt  game_small.txt  run_game.ps1
build-bench/: .ninja_log  cmake_install.cmake
build-bench-release/: .ninja_log  build.ninja
build-bench-release/src/ai/: cmake_install.cmake
build-bench/src/: cmake_install.cmake
build-bench/src/ai/: cmake_install.cmake
build-bench/tests/: CTestTestfile.cmake  cmake_install.cmake
build_tools/: conanbuildenv-release-x86_64.bat  conanfile.txt
conan/profiles/: mingw.profile  windows_mingw  windows_msvc
docs/: SETUP.md  TUTORIAL_MODES.md
scripts/: build.ps1  build.sh  run_with_timeout.ps1
src/: CMakeLists.txt  board.cpp  board.h  game.cpp  game.h  main.cpp  rules.cpp  rules.h  sgf.cpp  sgf.h  types.h  zobrist.cpp  zobrist.h
src/ai/: CMakeLists.txt  mcts.cpp  mcts.h  mcts_extra.cpp  pvn.cpp  pvn.h  thread_pool.h  tt_sharded.cpp  tt_sharded.h
src/bench/: CMakeLists.txt  bench_mcts.cpp  bench_mcts_simple.cpp
tests/: CMakeLists.txt  test_board.cpp  test_game.cpp  test_mcts.cpp  test_mcts_stress.cpp  test_mcts_threaded.cpp  test_scoring.cpp  test_sgf.cpp  test_sgf_escape.cpp  test_sgf_extra.cpp  test_sgf_meta.cpp  test_superko.cpp
tools/: Dockerfile  setup_conan.ps1
